# snopes-rating-bot

./: .gitignore  .replit  README.md  authorize.py  env-template  init_db.py  keep_alive.py  main-tweets.py  main.py  pyproject.toml  requirements.txt  run.bash  run.sh  setenv.sh  update.bash  update.sh
resources/: snopes_ratings.json
src/: keep_alive.py  snopes.py  store.py  twitter.py  util.py
tests/: db.py  reply.py  tweet.py
